Bug 974700 - cached asm.js doesn't cache profiled function info (r=bbouvier)